k8s/main-py.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-python-v1
  labels:
    app: main-python
    version: v1
spec:
  selector:
    matchLabels:
      app: main-python
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: main-python
        version: v1
    spec:
      volumes:
      - name: nfs-pv-storage
        persistentVolumeClaim:
          claimName: nfs-pv-claim
      containers:
      - name: main-python
        image: main-python:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
          name: "flask"
        volumeMounts:
        - mountPath: "/mnt/counters"
          name: nfs-pv-storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-python-v2
  labels:
    app: main-python
    version: v2
spec:
  selector:
    matchLabels:
      app: main-python
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: main-python
        version: v2
    spec:
      volumes:
      - name: nfs-pv-storage
        persistentVolumeClaim:
          claimName: nfs-pv-claim
      containers:
      - name: main-python
        image: main-python:2.0
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
          name: "flask"
        volumeMounts:
        - mountPath: "/mnt/counters"
          name: nfs-pv-storage
