k8s/nfs-main-py.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-python
spec:
  selector:
    matchLabels:
      app: main-python
  replicas: 3
  template:
    metadata:
      labels:
        app: main-python
    spec:
      volumes:
      - name: nfs-pv-storage
        persistentVolumeClaim:
          claimName: nfs-pv-claim
      containers:
      - name: main-python
        image: main-python:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
          name: "flask"
        volumeMounts:
        - mountPath: "/mnt/counters"
          name: nfs-pv-storage
