k8s/pv-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dataaccess
spec:
  containers:
    - name: alpine
      image: alpine:latest
      command: ["sleep", "infinity"]
      volumeMounts:
        - name: task-pv-storage
          mountPath: /mnt/data
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: task-pv-claim
