k8s/get-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-python-service
spec:
  selector:
    app: get-python
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 5000
  type: LoadBalancer
