k8s/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-python-service
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: main-python
