k8s/reset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reset-python-service
spec:
  selector:
    app: reset-python
  ports:
  - protocol: "TCP"
    port: 7000
    targetPort: 5000
  type: LoadBalancer
