k8s/roll-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roll-python-service
spec:
  selector:
    app: roll-python
  ports:
  - protocol: "TCP"
    port: 8000
    targetPort: 5000
  type: LoadBalancer
