k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-python-service
spec:
  selector:
    app: main-python
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
  type: LoadBalancer
