k8s/api-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-route
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match: 
    - uri:
        prefix: /counter/get
    route:
    - destination:
        host: main-python-service
        subset: v1
        port:
          number: 5000
  - match:
    - uri:
        prefix: /counter/poll
    route:
    - destination:
        host: main-python-service
        subset: v2
        port:
          number: 5000
  - match:
    - uri:
        prefix: /counter/reset
    route:
    - destination:
        host: main-python-service
        subset: v3
        port:
          number: 5000
