k8s/header-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: header-route
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match: 
    - uri:
        prefix: /counter
      headers:
        x1-version:
          exact: v1
    route:
    - destination:
        host: main-python-service
        subset: v1
        port:
          number: 5000
  - match:
    - uri:
        prefix: /counter
      headers:
        x1-version:
          exact: v2
    route:
    - destination:
        host: main-python-service
        subset: v2
        port:
          number: 5000
